--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -11,7 +11,7 @@
    	<%= @books.each do |book| %>
 	<tr>
 
-		<td> <%= attachment_image_tag @user, :profile_image_id, :fill, 20, 20, fallback: "no_image.jpg"%></td>
+		<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
 		<td><%= link_to book.title, book_path(@book_id) %></td>
 	 	<td><%= book.body %></td>
    	</tr>
