--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,11 +10,11 @@
 	   	</tr>
 	</thead>
 
-   	<%= @books.each do |book| %>
+   	<% @books.each do |book| %>
 	
 	<tr>
-		<td> <%= attachment_image_tag @user, :profile_image_id, :fill, 20, 20, fallback: "no_image.jpg"%></td>
-		<td><%= link_to book.title, book_path(@book_id) %></td>
+		<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
+		<td><%= link_to book.title, books_path(@book_id) %></td>
 	 	<td><%= book.body %></td>
    	</tr>
 	<% end %>
