--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,20 +1,16 @@
-<h1>Books</h1>
+<%= render 'users/topleft',user:@book.user %>
+<%= render 'books/bottomleft',book:@book %>
 
-<table>
-	<div class="underbar">
-		<tr>
-			<th class="title">Title</th>
-	   		<th class="opinion">Opinion</th>
-	   	</tr>
-	</div>
+<!-- 本編集 -->
 
-   	<%= @books.each do |book| %>
-	<tr>
+<h1>Editing Book</h1>
+<a>Title</a>
 
-		<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
-		<td><%= link_to book.title, book_path(@book_id) %></td>
-	 	<td><%= book.body %></td>
-   	</tr>
-	<% end %>
-</table>
+<%= f.text_field :title %>
 
+<h4>Opinion</h4>
+<%= f.text_field :body %>
+<%= f.submit "Update Book" %>
+
+<%= link_to "show", book_path %>
+<%= link_to "back", books_path %>
