--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -11,12 +11,11 @@
 	</thead>
 
    	<% @books.each do |book| %>
-	
-	<tr>
-		<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
-		<td><%= link_to book.title, books_path(@book_id) %></td>
-	 	<td><%= book.body %></td>
-   	</tr>
+		<tr>
+			<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
+			<td><%= link_to book.title, book_path(book.id) %></td>
+		 	<td><%= book.body %></td>
+	   	</tr>
 	<% end %>
 </table>
 
