--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <!-- 部分テンプレート -->
 
-<%= render 'users/topleft',user:@book.user %>
-<%= render 'books/bottomleft',book:@book %>
+<%= render 'users/topleft', user: @book.user %>
+<%= render 'books/bottomleft', book: @new_book %>
 
 
 
