--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.container {
+	width: 750px;
+}
+
+.container-1 {
+	height: 550px;
+}
+
+.col-xs-3 {
+	width:  25%;
+}
+
+col-xs-9 {
+	width: 75%;
+	float: left;
+}
