--- a/app/views/books/_bottomleft.html.erb
+++ b/app/views/books/_bottomleft.html.erb
@@ -1,10 +1,21 @@
+<div class="container">
+   <div class="row">
+   	<div class="col-xs-3">
+      <h2>New book</h2>
 
+      <%= form_for(book) do |f| %>
+        <p>Title</p>
+      <%= f.text_field :title %>
+        <p>Opinion</p>
+      <%= f.text_area :body %>
 
-<h1>New book</h1>
-<%= form_for(book) do |f| %>
- <p>Title</p>
-<%= f.text_field :title %>
- <p>Opinion</p>
-<%= f.text_area :body %>
-<%= f.submit "Create Book" %>
-<% end %>
+         <div class="actions row">
+	       
+	        <input type="submit" name="commit" value="Create Book" class="btn btn-primary col-xs-12" data-disable-with="Create Book">
+         </div>
+
+         <% end %>
+    </div>
+   </div>
+
+</div>
