--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,25 +1,35 @@
-
 <!-- 投稿一覧　-->
+<div class="body">
+  <div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+        	<%= render "users/topleft", user: @user %>
+            <%= render "books/bottomleft", book: @book %>
+        </div>
 
-<h1>Books</h1>
-<table>
-	<thead>
-		<tr>
-			<th class="title">Title</th>
-	   		<th class="opinion">Opinion</th>
-	   	</tr>
-	</thead>
+		<div class="col-xs-9">
+		<h1>Books</h1>
+		    <table class="table">
+				<thead>
+					<tr>
+						<th>Title</th>
+				   		<th>Opinion</th>
+				   		<th colspan="3"></th>
+				   	</tr>
+				</thead>
 
-   	<% @books.each do |book| %>
-		<tr>
-			<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
-			<td><%= link_to book.title, book_path(book.id) %></td>
-		 	<td><%= book.body %></td>
-	   	</tr>
-	<% end %>
-</table>
+				<% @books.each do |book| %>
 
-<!-- 部分テンプレート -->
-
-<%= render "users/topleft", user: @user %>
-<%= render "books/bottomleft", book: @book %>
+				<tbody>
+					<tr>
+						<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
+						<td><%= link_to book.title, book_path(book.id) %></td>
+					 	<td><%= book.body %></td>
+				   	</tr>
+				   	<% end %>
+				</tbody>
+	        </table>
+        </div>
+    </div>
+  </div>
+</div>
