--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,14 +1,42 @@
 
 
-<h1>Welcome to<span class="glyphicon glyphicon-book" aria-hidden="true"></span> Bookers!</h1>
+<div class="body">
+	<div class="container">
+		<p id="notice"></p>
 
-<a>Im <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,</a>
-
-<a>you can share and exchange your opinions , inpressions , and<br> emotions<br>
-<br>
-about various books!</a>
-
+		<div class="row-1">
+			<div class="top-message col-md-offset-3 col-md-6">
 
 
-<%= link_to "Log in", new_user_session_path %>
-<%= link_to "Sign Up", new_user_registration_path %>
+              <h1>Welcome to
+              	<span class="glyphicon glyphicon-book" aria-hidden="true"></span> Bookers!!</h1>
+
+               <p>In <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers,</p>
+
+               <p>you can share and exchange your opinions , inpressions , and emotions</p>
+
+               <p>about various books!</p>
+
+
+              <div class="btn-wrapper">
+	             <div class="row">
+		           <p><a class="btn btn-info col-xs-10 col-xs-offset-1 sign_in" href="/users/sign_in">Log in</a></p>
+                 </div>
+
+                 <div class="row">
+    	           <p><a class="btn btn-success col-xs-10 col-xs-offset-1 sign_up" href="/users/sign_up">Sign Up</a></p>
+                 </div>
+               </div>
+
+                  <div class="col-xs-3 col-xs-offset-9">
+                     <p>CopyRight Infratop.inc</p>
+                  </div>
+
+              </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
