--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,34 @@
-<h1>Users</h1>
+<div class="row">
+	<div class="col-xs-3">
 
-<% @users.each do |user| %>
-	<p>image</p>
-	<%= user.profile_image_id %>
-	<p>name</p>
-	<span>user.name</span>
-<% end %>
+		<!-- 部分テンプレート -->
+		<%= render "users/topleft", user: @user %>
+        <%= render "books/bottomleft", book: @book%>
+		
+	</div>
+
+	<!-- 自分以外のユーザーの投稿一覧 -->
+
+	<div class="col-xs-9">
+		<h1>Users</h1>
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Image</th>
+					<th>Name</th>
+				</tr>
+			</thead>
+
+		<tbody>
+			<%= @users.each do |user| %>
+			<tr>
+				<td><%= attachment_image_tag user, :profile_image, :fill, 60,60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %></td>
+				<td><%= user.name %></td>
+				<td><%= link_to "show",user_path(user.id)%></td>
+			</tr>
+			<% end %>
+		</tbody>
+		</table>
+		
+	</div>
+</div>
