--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,25 +1,43 @@
 <!-- マイページ -->
 
-<%= render 'users/topleft',user:@user %>
-<%= render 'books/bottomleft',book:@book %>
+<!-- 投稿一覧　-->
+<div class="body">
+  <div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+        	<%= render "users/topleft", user: @user %>
+            <%= render "books/bottomleft", book: @book %>
+        </div>
 
-<h1>Books</h1>
+		<div class="col-xs-9">
+		<h1>Books</h1>
+		    <table class="table">
+				<thead>
+					<tr>
+						<th>""</th>
+						<th>Title</th>
+				   		<th>Opinion</th>
+				   		<th colspan="3"></th>
+				   	</tr>
+				</thead>
 
-<table>
-	<thead>
-		<tr>
-			<th>Title</th>
-			<th>Opinion</th>
-		</tr>
-	</thead>
+				<% @books.each do |book| %>
 
-	<tbody>
-		<% @user.posts.each do |post| %>
-		<tr>
-			<td><%= post.title %></td>
-			<td><%= post.body %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+				<tbody>
+					<tr>
+						<td> <%= attachment_image_tag @user, :profile_image, :fill, 20, 20, fallback: "no_image.jpg"%></td>
+						<td><%= link_to book.title, book_path(book.id) %></td>
+					 	<td><%= book.body %></td>
+				   	</tr>
+				   	<% end %>
+				</tbody>
+	        </table>
+        </div>
+    </div>
+  </div>
+</div>
+
+<!-- 部分テンプレート -->
+
+
 
