--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,17 +1,33 @@
-<%= render 'users/topleft',user:@book.user %>
-<%= render 'books/bottomleft',book:@book %>
+<div class="body">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<h1>Editing Book</h1>
 
-<!-- 本編集 -->
+					<%= form_for(@book) do |f| %>
+					<div class="field row">
+						<label for="book_title">Title</label>
+						<div class="col-xs-12 book_title">
+							<%= f.text_field :title %>
+						</div>
+					</div>
+					<div class="field row">
+						<label for="book_opinion">Opinion</label>
+						<div class="col-xs-12 book_body">
+							<%= f.text_area :body %>
+						</div>
+					</div>
+					<div class="actions row">
+						<div btn btn-primary col-xs-12>
+						<%= f.submit "Update Book" %>
+					</div>
+					</div>
+					<% end %>
+			</div>
+		</div>
+	</div>
+</div>
 
-<h1>Editing Book</h1>
-	<a>Title</a>
-<%= form_for(@book) do |f| %>
-	<%= f.text_field :title %>
+<%= link_to "Show", book_path(@book.id) %>
+<%= link_to "Back", books_path %>
 
-	<h4>Opinion</h4>
-	<%= f.text_field :body %>
-	<%= f.submit "Update Book" %>
-<% end %>
-
-<%= link_to "show", book_path %>
-<%= link_to "back", books_path %>
