--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,66 +26,61 @@
                    <% if user_signed_in? %>
 
                     <li>
-                      <a class="glyphicon glyphicon-home home" href="/users"></a>
-                      <%= link_to 'Home', user_path(current_user.id) %>
+                      <%= link_to 'Home', user_path(current_user.id), class: "glyphicon glyphicon-home home" %>
                     </li>
 
                     <li>
-                      <a class="glyphicon glyphicon-user users" href="/users"></a>
-                      <%= link_to 'Users', users_path %>
+                      <%= link_to 'Users', users_path, class:"glyphicon glyphicon-user users" %>
                     </li>
 
                     <li>
-                      <a class="glyphicon glyphicon-book books" href="/books"></a>
-                      <%= link_to 'Books', books_path %>
+                      <%= link_to 'Books', books_path, class:"glyphicon glyphicon-book books" %>
                     </li>
 
                     <li>
-                      <a class="glyphicon glyphicon-log-out logout" rel="nofollow" data-method="delete" href="/users/sign out"></a>
-                      <%= link_to 'logout', destroy_user_session_path, method: :delete %>
+                      <%= link_to 'logout', destroy_user_session_path, method: :delete,class:"glyphicon glyphicon-log-out logout" %>
                     </li>
 
                     <% else %>
 
                     <li>
-                      <a class="glyphicon glyphicon-home home" href="/home"></a>
-                      <%= link_to "Home", root_path %>
+                      <%= link_to "Home", root_path,class:"glyphicon glyphicon-home home" %>
                     </li>
 
                     <li>
-                      <a class="glyphicon glyphicon-link about" href="/home/about"></a>
-                      <%= link_to "About", about_path %>
+                      <%= link_to "About", home_about_path,class:"glyphicon glyphicon-link about" %>
                     </li>
 
                     <li>
-                      <a class="glyphicon glyphicon-edit sign_up" href="/users/sign_up"></a>
-                      <%= link_to "sign up", new_user_password_path %>
+                      <%= link_to "sign up", new_user_registration_path,class:"glyphicon glyphicon-edit sign_up" %>
                     </li>
 
                     <li class="">
-                      <a class="glyphicon glyphicon-log-in sign_in" href="/users/sign_in"></a>
-                      <%= link_to "login", new_user_session_path %>
+                      <%= link_to "login", new_user_session_path,class:"glyphicon glyphicon-log-in sign_in" %>
                     </li>
-
-
                     <% end %>
-
                 </ul>
               </nav>
-
         </div>
 
     </header>
-
-    <% if flash[:notice] %>
-      <div class="flash">
-        <%= flash[:notice] %>
+    <div class="body">
+      <div class="container">
+        <%= notice %>
+        <%= yield %>
       </div>
-    <% end %>
+    </div>
 
-    <%= yield %>
-
-    
+    <footer>
+    <div class="body">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-9">
+            <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    </footer>
   </body>
-
 </html>
