--- a/app/views/users/_topleft.html.erb
+++ b/app/views/users/_topleft.html.erb
@@ -1,12 +1,11 @@
 
 
+
 <div class="container">
-
    <div class="row">
-
    	<div class="col-xs-3">
    		<h2>User info</h2>
-	     <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, format: 'jpeg',
+	     <%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg',
 	 	   class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
 	 	   <table>
 	 	   	<tbody>
@@ -25,14 +24,13 @@
 	       </table>
 
 	       <div class="row">
-              <% if user.id == current_user.id %>
+              
 
               <p><%= link_to "", edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench
               edit_user" %></p>
-              <% end %>
+              
    		   </div>
    	</div>
    </div>
 </div>
-
 
