[Rspec all clean]

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -3,23 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.h2 {
-	font-size: 30px;
-}
 
-.container {
-	width: 750px;
-}
-
-.container-1 {
-	height: 550px;
-}
-
-.col-xs-3 {
-	width:  25%;
-}
-
-.col-xs-9 {
-	width: 75%;
-	float: left;
+.user-name {
+    display: block;
 }
