--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,23 +62,6 @@ header {
     padding-right: 15px;
 }
 
-.h1 {
-	margin-top: 20px;
-	margin-bottom: 10px;
-	font-size: 36px;
-}
-
-.row-1 {
-	padding-top: 40px;
-}
-
-
-/* ログイン画面↓ */
-
-.col-xs-offset-9 {
-	margin-left: 75%;
-}
-
-.col-xs-3 {
-	width: 25%;
+.user-name {
+    display: block;
 }
