--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
 
 				<tbody>
 					<tr>
-						<td> <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg"%></td>
+						<td><%= link_to user_path(book.user_id) do %><%= attachment_image_tag @user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg"%><% end %></td>
 						<td><%= link_to book.title, book_path(book.id) %></td>
 					 	<td><%= book.body %></td>
 				   	</tr>
