--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,18 +11,23 @@
 	            <p id="notice"></p>
 				<h1>Book detail</h1>
 
-				<table>
-					<thead>
-						<tr>
-							<th></th>
-						</tr>
-					</thead>
+				<table class="table">
 						<tbody>
 							<tr>
-								<%= attachment_image_tag @user, :profile_image, :fill, 60,60, format: 'jpeg', class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-								<td><%= @book.user.name %></td>
-								<td><%= @book.title %></td>
-								<td><%= @book.body %></td>
+                                <td>
+								<%= link_to user_path(@book.user_id) do %>
+								<%= attachment_image_tag @user, :profile_image, :fill, 60,60, fallback: "no_image.jpg" %>
+								<div class="user-name">
+									<%= @book.user.name %>
+								</div>
+								<% end %>
+								</td>
+
+									<td><%= @book.title %></td>
+									<td><%= @book.body %></td>
+
+
+
 								<% if @book.user.id == current_user.id %>
 
 								<td><%= link_to "Edit",edit_book_path(@book),class: "btn-sm btn-success" %></td>
