--- a/app/views/users/_topleft.html.erb
+++ b/app/views/users/_topleft.html.erb
@@ -7,7 +7,7 @@
    		<h2>User info</h2>
 	     <%= attachment_image_tag user, :profile_image, :fill, 60, 60, format: 'jpeg',
 	 	   class: "img-circle pull-left profile-img", fallback: "no_image.jpg" %>
-	 	   <table>
+	 	   <table class="table">
 	 	   	<tbody>
 	 	   		<tr></tr>
 	 	   		<tr>
@@ -24,11 +24,10 @@
 	       </table>
 
 	       <div class="row">
-              
 
               <p><%= link_to "", edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench
               edit_user" %></p>
-              
+
    		   </div>
    	</div>
    </div>
