--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,14 @@ header {
 	padding: 10px 0 0;
 }
 
+.actions {
+    margin-top: 10px;
+}
+
+.field {
+    margin-bottom: 10px;
+}
+
 .user-name {
     display: block;
 }
