--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,26 +16,23 @@
 
 
             <h1>User info</h1>
-            <%= notice %>
             <%= form_for(@user) do |f| %>
             	<div class="form-group has-icon">
-                    <label class="control-label sr-only" for="inputEmail">Name</label>
-                    <%= f.text_field :name, autofocus: true, class:"form-control",
-                    	id:"inputEmail", placeholder:"名前"%>
-                    <span class="fa fa-user form-control-icon" aria-hidden="true"></span>
+                    <label for="user_name">Name</label>
+                    <%= f.text_field :name, autofocus: true, class:"name",
+                    	id:"user_name" %>
                 </div>
 
             	<div class="form-group has-icon">
                 	<div class="user-edit-image">
-                    	<%= attachment_image_tag @user, :profile_image, size: "100x100",
-                    	class: "img-circle pull-left profile-thumb", fallback: "no_image.jpg"%>
+
                 	</div>
 
-                	<label class="control-label sr-only" for="inputEmail">ProfileImage</label>
+                	<label for="user_image">Image</label>
                 	<%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "user-edit-form" %>
             	</div>
 
-            	<p>Introduction</p>
+                <label for="introduction">Introduction</label>
             	<%= f.text_area :introduction %>
 
                 <div class="actions">
